--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,6 +33,9 @@
         {{ block "main" .  }}
           <!-- Bio -->
           {{ partial "bio" . }}
+
+          <!-- Links -->
+          {{ partial "links" . }}
         {{ end }}
 
         <!-- Footer -->
