--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,4 +1,4 @@
 <div class="split-intro">
-  {{ with .Title }}<h1>{{ . }}</h1>{{ end }}
+  {{ with .Title }}<h1><a href="{{ $.Site.BaseURL | safeURL }}" target="_self">{{ . }}</a></h1>{{ end }}
   {{ with .Params.tagline }}<h2 class="tagline">{{ . }}</h2>{{ end }}
 </div>
