--- a/static/assets/css/split.css
+++ b/static/assets/css/split.css
@@ -184,7 +184,7 @@ body.page-template-page-fullsingle-split p {
   line-height: 80px;
   letter-spacing: -2px;
 }
-.split-intro h1 {
+.split-intro h1, .split-intro a {
   font-weight: 400;
   text-transform: uppercase;
   font-size: 16px;
