--- a/static/assets/css/split.css
+++ b/static/assets/css/split.css
@@ -118,11 +118,11 @@ body.page-template-page-fullsingle-split {
   font-size: 21px;
   line-height: 33px;
   letter-spacing: -0.2px;
-  color: #848d96;
+  color: #b3bfcb;
   animation: fadein 2s;
 }
 body.page-template-page-fullsingle-split p {
-  color: #848d96;
+  color: #b3bfcb;
 }
 
 .fs-split {
@@ -192,9 +192,14 @@ body.page-template-page-fullsingle-split p {
   margin-bottom: 40px;
   letter-spacing: 0.4px;
   color: #47bec7;
+  transition-duration: 0.5s;
 }
 .split-intro .tagline {
   color: #CCCCCC;
+}
+.split-intro a:hover {
+  color: #CCCCCC;
+  transition-duration: 0.1s;
 }
 
 .split-bio {
@@ -212,14 +217,14 @@ body.page-template-page-fullsingle-split p {
   }
 }
 .split-bio p {
-  color: #848d96;
+  color: #b3bfcb;
   margin-bottom: 20px;
   line-height: inherit;
 }
 .split-bio a {
-  color: #848d96;
+  color: #b3bfcb;
   transition-duration: 0.5s;
-  border-bottom: 1px dotted #848d96;
+  border-bottom: 1px dotted #b3bfcb;
 }
 .split-bio a:hover {
   color: #CA486d;
@@ -341,7 +346,7 @@ body.page-template-page-fullsingle-split p {
   font-size: 11px;
   line-height: 11px;
   margin-bottom: 31px;
-  color: #848d96;
+  color: #bcc9d6;
   letter-spacing: 2px;
   opacity: 0.5;
 }
@@ -351,7 +356,7 @@ body.page-template-page-fullsingle-split p {
   margin-bottom: 12px;
 }
 .split-lists .split-list ul li a {
-  color: #848d96;
+  color: #b3bfcb;
   transition-duration: 0.5s;
 }
 .split-lists .split-list ul li a:hover {
@@ -367,7 +372,7 @@ body.page-template-page-fullsingle-split p {
   line-height: 14px;
 }
 .split-credit p a {
-  color: #848d96;
+  color: #b3bfcb;
 }
 
 .split-video {
