wcag compliance for h3 contrast

--- a/static/assets/css/split.css
+++ b/static/assets/css/split.css
@@ -346,7 +346,7 @@ body.page-template-page-fullsingle-split p {
   font-size: 11px;
   line-height: 11px;
   margin-bottom: 31px;
-  color: #bcc9d6;
+  color: #d2e2f1;
   letter-spacing: 2px;
   opacity: 0.5;
 }
