--- a/static/assets/css/split.css
+++ b/static/assets/css/split.css
@@ -118,11 +118,11 @@ body.page-template-page-fullsingle-split {
   font-size: 21px;
   line-height: 33px;
   letter-spacing: -0.2px;
-  color: #b3bfcb;
+  color: #d2e2f1;
   animation: fadein 2s;
 }
 body.page-template-page-fullsingle-split p {
-  color: #b3bfcb;
+  color: #d2e2f1;
 }
 
 .fs-split {
@@ -217,14 +217,14 @@ body.page-template-page-fullsingle-split p {
   }
 }
 .split-bio p {
-  color: #b3bfcb;
+  color: #d2e2f1;
   margin-bottom: 20px;
   line-height: inherit;
 }
 .split-bio a {
-  color: #b3bfcb;
+  color: #d2e2f1;
   transition-duration: 0.5s;
-  border-bottom: 1px dotted #b3bfcb;
+  border-bottom: 1px dotted #d2e2f1;
 }
 .split-bio a:hover {
   color: #CA486d;
@@ -356,7 +356,7 @@ body.page-template-page-fullsingle-split p {
   margin-bottom: 12px;
 }
 .split-lists .split-list ul li a {
-  color: #b3bfcb;
+  color: #d2e2f1;
   transition-duration: 0.5s;
 }
 .split-lists .split-list ul li a:hover {
@@ -372,7 +372,7 @@ body.page-template-page-fullsingle-split p {
   line-height: 14px;
 }
 .split-credit p a {
-  color: #b3bfcb;
+  color: #d2e2f1;
 }
 
 .split-video {
