changes links column width, added lists top padding

--- a/static/assets/css/split.css
+++ b/static/assets/css/split.css
@@ -330,9 +330,10 @@ body.page-template-page-fullsingle-split p {
 }
 
 .split-lists .split-list {
-  width: 30%;
+  width: 25%;
   display: inline-block;
   margin-bottom: 40px;
+  margin-top: 11px;
   vertical-align: top;
 }
 @media (max-width: 500px) {
